Add local SQL route
